# wispr_analysis

./: .coveragerc  .gitignore  .readthedocs.yaml  README.md  composites.py  data_cleaning.py  image_alignment.py  plot_utils.py  projections.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  utils.py  videos.py
.github/workflows/: main.yml
docs/: conf.py  index.rst
docs/source/: conf.py  index.rst  installing.rst  synthesizing_images.rst
radiants/: radiants.py  synthetic_data.py
radiants/tests/: test_radiants.py  test_synthetic_data.py
radiants/tests/reference/: test_select_speed_range.txt
tests/: test_composites.py  test_data_cleaning.py  test_image_alignment.py  test_plot_utils.py  test_projections.py  test_utils.py
tests/reference/: test_sliding_window_1D.txt  test_sliding_window_stats.txt
wispr_analysis/: __init__.py  composites.py  constellations.py  data_cleaning.py  data_wrangling.py  image_alignment.py  orbital_frame.py  planets.py  plot_utils.py  projections.py  star_tools.py  utils.py  videos.py
wispr_analysis/orbital_plane_slices/: model_fitting.py  orbital_plane_slices.py
wispr_analysis/radiants/: radiants.py  synthetic_data.py
wispr_analysis/stationary_point/: __init__.py  stationary_point.py
wispr_analysis/synthetic_data/: synthetic_data.py
wispr_analysis/tests/: test_composites.py  test_constellations.py  test_contellations.py  test_data_cleaning.py  test_data_wrangling.py  test_image_alignment.py  test_orbital_frame.py  test_planets.py  test_plot_utils.py  test_projections.py  test_star_tools.py  test_utils.py
(+225 files in other folders)
