[metadata]
name = wispr_analysis
author = Sam Van Kooten
author_email =  samuel.vankooten@swri.org
license = GPL v3
license_file = LICENSE
url = https://github.com/svank/wispr_analysis
description = Shared tools for WISPR data analysis

[options]
zip_safe = False
packages = find:
python_requires = >=3.8
install_requires = file:requirements.txt
setup_requires = setuptools_scm
include_package_data = True

[options.package_data]
* = *.tsv

[options.extras_require]
test =
    pytest-astropy
docs =
    sphinx-astropy
